demo/3-vs-rt.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      jwt:
        providers:
          solo:
            audiences:
            - gloo
            issuer: solo.io
            jwks:
              local:
                key: |
                  -----BEGIN PUBLIC KEY-----
                  MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAx7s5/6vgGPoW1PKkSMka
[...]
                  TQIDAQAB
                  -----END PUBLIC KEY-----
    routes:
    - matchers:
       # delegate ownership of routes for '/httpbin'
       - prefix: /httpbin
      delegateAction:
        ref:
          name: httpbin-routes
          namespace: httpbin
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
