demo/vs-bookinfo-oidc.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'bookinfo.35-188-14-48.nip.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-productpage-9080
            namespace: gloo-system
    options:
      extauth:
        configRef:
          name: bookinfo-oidc
          namespace: gloo-system
